[package]
name = "telekinesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"